More dark mode tweaking. Fixing a poor selector on the desktop aside fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,10 +52,7 @@ html {
 body {
   width: 100%;
   font-family: "Merriweather", "Baskerville", "Palatino Linotype", Georgia, serif;
-  color: #333;
-  -webkit-transition: background-color 0.25s;
-  -moz-transition: background-color 0.25s;
-  transition: background-color 0.25s; }
+  color: #333; }
   body * + * {
     margin: 1em auto 0; }
     @media screen and (min-width: 80em) {
@@ -106,9 +103,6 @@ h4 {
   font-family: "Merriweather", "Baskerville", "Palatino Linotype", Georgia, serif; }
 
 p, aside, pre code, li {
-  -webkit-transition: background-color 0.25s;
-  -moz-transition: background-color 0.25s;
-  transition: background-color 0.25s;
   font-size: 1rem;
   line-height: 1.75;
   color: #4b4f62; }
@@ -150,7 +144,7 @@ aside {
       position: absolute;
       width: 12em;
       padding: 0;
-      left: -15em;
+      left: -14em;
       margin-left: 2.5%;
       text-align: right; } }
 
@@ -291,8 +285,8 @@ main, .site-header, nav.pagination .pagination-links {
   position: relative;
   padding: 0 1.5em; }
   @media screen and (min-width: 80em) {
-    main main, .site-header main, nav.pagination .pagination-links main, main .site-header, .site-header .site-header, nav.pagination .pagination-links .site-header, main nav.pagination .pagination-links, nav.pagination main .pagination-links, .site-header nav.pagination .pagination-links, nav.pagination .site-header .pagination-links, nav.pagination .pagination-links .pagination-links {
-      left: 5em; } }
+    main, .site-header, nav.pagination .pagination-links {
+      left: 7em; } }
 
 .animated {
   -webkit-transition: all 0.25s;
@@ -838,6 +832,7 @@ nav.pagination {
 
 .view-toggle {
   position: absolute;
+  display: none;
   right: 1em;
   top: 1em;
   cursor: pointer;
@@ -853,11 +848,8 @@ nav.pagination {
   transition: opacity 0.25s, background-position 0.25s cubic-bezier(0.91, 0, 0.07, 0.97); }
   .view-toggle:hover {
     opacity: 1; }
-
-body, h1, h2, h3, h4, h5, h6, p, li, q, aside, code {
-  -webkit-transition: background-color 0.25s, color 0.25s;
-  -moz-transition: background-color 0.25s, color 0.25s;
-  transition: background-color 0.25s, color 0.25s; }
+  .view-toggle.visible {
+    display: block; }
 
 .dark-mode {
   background-color: #1f2028;
