--- a/precompiled/sass-partials/_globals.scss
+++ b/precompiled/sass-partials/_globals.scss
@@ -6,7 +6,6 @@ body{
 	width:100%;
 	font-family:$serif;
 	color:#333;
-	@include transition(background-color 0.25s);
 	* + *{
 		margin:1em auto 0;
 		@media #{$desktop}{
@@ -66,7 +65,6 @@ h4{
 }
 
 p,aside,pre code,li{
-	@include transition(background-color 0.25s);
 	font-size: 1rem;
 	line-height: 1.75;
 	color:$grey-3;
@@ -110,7 +108,7 @@ aside{
 		position:absolute;
 		width:12em;
 		padding:0;
-		left:-15em;
+		left:-14em;
 		margin-left: 2.5%;
 		text-align: right;
 	}
